# WOW

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  WOW.cpp  dev-notes.md  notes.md
docs/: example.wow  examples.wow  grammar.md
src/: CMakeLists.txt
src/exception/: exception.h
src/fread/: fread.h
src/interpretator/: WOW.cpp  vm.h
src/interpreter/: CMakeLists.txt  WOW.cpp  add_interpreter_test.cpp  interpreter.h  vm.h
src/syntaxCheck/: CMakeLists.txt  run_syntaxCheck.cpp  syntaxCheck.h  test.input  test.output
src/tests/: CMakeLists.txt  run_tests.cpp
src/tests/interpreter_tests/: interpreter_tests.h
src/tests/syntaxCheck_tests/: syntaxCheck_tests.h
src/tests/tests_files/interpreter_tests/negatives/: test_4.output  test_8.input  test_8.output
src/tests/tests_files/interpreter_tests/positives/: test_16.input  test_2.code  test_20.input  test_21.input  test_28.input  test_3.code  test_3.output  test_30.input  test_4.code  test_5.code  test_5.output  test_8.code  test_9.code  test_9.output
src/tests/tests_files/tokenizer_tests/negatives/: test_2.input
src/tests/tests_files/tokenizer_tests/positives/: test_1.output  test_10.input  test_11.input  test_12.output  test_13.input  test_13.output  test_2.output  test_5.output  test_6.output  test_8.output  test_9.output
src/tests/tokenizer_tests/: tokenizer_tests.h
src/tokenizer/: CMakeLists.txt  run_tokenize.cpp  test.input  test.output  token.h  tokenizer.h
src/translator/: CMakeLists.txt  run_Translator.cpp  run_syntaxCheck.cpp  test.input  translator.h
src/utils/: exception.h  poliz.h  simpleFunctions.h  str_split.h  wowobj.h
tests/: CMakeLists.txt
tokenizer/: run_tokenize.cpp  token.h  tokenizer.h
(+49 files in other folders)
